
[TestUI_NavigationViewBaseline/navigation_standard_120x30 - 1]
[?25l[?2004h[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m╭────────────────────────────────────────────────────────╮[0m    
[38;5;240m│[0m     [1;38;5;212mProviders[0m                                          [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                                            [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                                              [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m     aws_s3_bucket                                      [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m   5 attributes                                         [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                                                 [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m                              [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Resources (2 items)                                [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)                      [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Provider Functions (2 items)                       [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m press / to filter                                      [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m╰────────────────────────────────────────────────────────╯[0m    
[48;5;240m [0m[38;5;252;48;5;240m[1;38;5;212mterraform[0m [38;5;252m1.10.5[0m[38;5;240m | [0m[1;38;5;212mprovider[0m=[38;5;252mregistry.terraform.io/hashicorp/aws[0m[38;5;240m | [0m[1;38;5;212mtype[0m=[38;5;252mResources[0m[48;5;240m                                       [0m[120D
---

[TestUI_NavigationViewBaseline/navigation_compact_80x24 - 1]
[?25l[?2004h[38;5;240m│[0m     [1;38;5;212mProviders[0m                      [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                        [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                          [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m            [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m     aws_s3_bucket                  [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m   5 attributes                     [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m╰────────────────────────────────────╯[0m[96m│[0m                                    [96m│[0m    
[38;5;240m╭────────────────────────────────────╮[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                             [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m          [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Resources (2 items)            [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)  [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Provider Functions (2 items)   [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m press / to filter                  [96m│[0m    
[38;5;240m╰────────────────────────────────────╯[0m[96m╰────────────────────────────────────╯[0m    
[48;5;240m [0m[38;5;252;48;5;240m[1;38;5;212mterraform[0m [38;5;252m1.10.5[0m[38;5;240m | [0m[1;38;5;212mprovider[0m=[38;5;252mregistry.terraform.io/hashicorp/aws[0m[38;5;240m |[m[0m[48;5;240m              [0m
[48;5;240m [0m[38;5;252;48;5;240m[38;5;240m[0m[1;38;5;212mtype[0m=[38;5;252mResources[0m[48;5;240m                                                                 [0m[80D
---

[TestUI_NavigationViewBaseline/navigation_wide_160x40 - 1]
[?25l[?2004h[38;5;240m╭────────────────────────────────────────────────────────────────────────────╮[0m[96m╭────────────────────────────────────────────────────────────────────────────╮[0m    
[38;5;240m│[0m     [1;38;5;212mProviders[0m                                                              [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                                                                [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                                                                  [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                                    [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m     aws_s3_bucket                                                          [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m   5 attributes                                                             [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────────────────────────╯[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m╭────────────────────────────────────────────────────────────────────────────╮[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                                                                     [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m                                                  [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m     Resources (2 items)                                                    [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)                                     
---

[TestUI_TreeViewBaseline/tree_view_standard_120x30 - 1]
[?25l[?2004h[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m╭────────────────────────────────────────────────────────╮[0m    
[38;5;240m│[0m     [1;38;5;212mProviders[0m                                          [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                                            [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                                              [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m     aws_s3_bucket                                      [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m   5 attributes                                         [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                                                 [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m                              [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Resources (2 items)                                [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)                      [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Provider Functions (2 items)                       [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m press / to filter                                      [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m╰────────────────────────────────────────────────────────╯[0m    
[48;5;240m [0m[38;5;252;48;5;240m[1;38;5;212mterraform[0m [38;5;252m1.10.5[0m[38;5;240m | [0m[1;38;5;212mprovider[0m=[38;5;252mregistry.terraform.io/hashicorp/aws[0m[38;5;240m | [0m[1;38;5;212mtype[0m=[38;5;252mResources[0m[48;5;240m                                       [0m[120D[29A[38;5;240m│[0m   [1;38;5;212mResources[0m                                              [38;5;240m│[0m[96m│[0m [1;38;5;212mSchema (Arguments)[0m                                       [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;178mtags ({{{} {{{} 83}}}}) [optional][0m                [96m│[0m
[38;5;240m│[0m  [1;38;5;170m> aws_instance[0m                                          [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196mami ({{{} 83}}) [required][0m                        [96m│[0m
[38;5;240m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                  [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196minstance_type ({{{} 83}}) [required][0m              [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;118mroot_block_device [block][0m                         [96m│[0m
[38;5;240m│[0m     aws_s3_bucket                                        [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mvolume_type ({{{} 83}}) [optional][0m             [96m│[0m
[38;5;240m│[0m   5 attributes                                           [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mvolume_size ({{{} 78}}) [optional][0m             [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m │  └──[ ] [38;5;178mencrypted ({{{} 66}}) [optional][0m               [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m └──[ ] [38;5;118mebs_block_device [block][0m                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m press space to select, 'a' to toggle 
---

[TestUI_TreeViewBaseline/tree_view_compact_80x24 - 1]
[?25l[?2004h[38;5;240m│[0m     [1;38;5;212mProviders[0m                      [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                        [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                          [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m            [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m     aws_s3_bucket                  [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m   5 attributes                     [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m╰────────────────────────────────────╯[0m[96m│[0m                                    [96m│[0m    
[38;5;240m╭────────────────────────────────────╮[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                             [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m          [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Resources (2 items)            [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)  [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m     Provider Functions (2 items)   [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m                                    [96m│[0m    
[38;5;240m│[0m                                    [38;5;240m│[0m[96m│[0m press / to filter                  [96m│[0m    
[38;5;240m╰────────────────────────────────────╯[0m[96m╰────────────────────────────────────╯[0m    
[48;5;240m [0m[38;5;252;48;5;240m[1;38;5;212mterraform[0m [38;5;252m1.10.5[0m[38;5;240m | [0m[1;38;5;212mprovider[0m=[38;5;252mregistry.terraform.io/hashicorp/aws[0m[38;5;240m |[m[0m[48;5;240m              [0m
[48;5;240m [0m[38;5;252;48;5;240m[38;5;240m[0m[1;38;5;212mtype[0m=[38;5;252mResources[0m[48;5;240m                                                                 [0m[80D[23A[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196mami ({{{} 83}}) [required][0m    [96m│[0m
[38;5;240m│[0m  [1;38;5;170m> aws_instance[0m                      [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196minstance_type ({{{} 83}})[m     [96m│[0m
[38;5;240m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m              [38;5;240m│[0m[96m│[0m [1;38;5;196m[required][0m                           [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;178mtags ({{{} {{{} 83}}}})[m       [96m│[0m
[38;5;240m│[0m     aws_s3_bucket                    [38;5;240m│[0m[96m│[0m [38;5;178m[optional][0m                           [96m│[0m
[38;5;240m│[0m   5 attributes                       [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;118mroot_block_device [block][0m     [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mvolume_type ({{{} 83}})[m    [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m [38;5;178m[optional][0m                           [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mvolume_size ({{{} 78}})[m    [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m [38;5;178m[optional][0m                           [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m │  └──[ ] [38;5;178mencrypted ({{{} 66}})[m      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m [38;5;178m[optional][0m                           [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m └──[ ] [38;5;118mebs_block_device [block][0m      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m press space to select, 'a' to toggle [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m args/attrs                           [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m│[0m [38;5;240mpress / to filter[0m                    [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m│[0m                                      [38;5;240m│[0m[96m│[0m                                      [96m│[0m
[38;5;240m╰──────────────────────────────────────╯[0m[96m╰──────────────────────────────────────╯[0m

[80D
---

[TestUI_TreeViewBaseline/tree_view_wide_160x40 - 1]
[?25l[?2004h[38;5;240m╭────────────────────────────────────────────────────────────────────────────╮[0m[96m╭────────────────────────────────────────────────────────────────────────────╮[0m    
[38;5;240m│[0m     [1;38;5;212mProviders[0m                                                              [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                                                                [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                                                                  [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                                    [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m     aws_s3_bucket                                                          [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m   5 attributes                                                             [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────────────────────────╯[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m╭────────────────────────────────────────────────────────────────────────────╮[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                                                                     [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m                                                                            [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m                                                  [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m     Resources (2 items)                                                    [38;5;240m│[0m[96m│[0m                                                                            [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)                                     
---

[TestUI_TreeViewWidthComparison/tree_view_entity1 - 1]
[?25l[?2004h[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m╭────────────────────────────────────────────────────────╮[0m    
[38;5;240m│[0m     [1;38;5;212mProviders[0m                                          [38;5;240m│[0m[96m│[0m   [1;38;5;212mResources[0m                                            [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m [38;2;97;97;97mNo items.[0m                                              [38;5;240m│[0m[96m│[0m  [1;38;5;170m> aws_instance[0m                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m     aws_s3_bucket                                      [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m   5 attributes                                         [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m╭────────────────────────────────────────────────────────╮[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m   [1;38;5;212mType[0m                                                 [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m  [1;38;5;170m> Data Sources (2 items)[0m                              [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Resources (2 items)                                [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Ephemeral Resources (1 items)                      [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m     Provider Functions (2 items)                       [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m                                                        [96m│[0m    
[38;5;240m│[0m                                                        [38;5;240m│[0m[96m│[0m press / to filter                                      [96m│[0m    
[38;5;240m╰────────────────────────────────────────────────────────╯[0m[96m╰────────────────────────────────────────────────────────╯[0m    
[48;5;240m [0m[38;5;252;48;5;240m[1;38;5;212mterraform[0m [38;5;252m1.10.5[0m[38;5;240m | [0m[1;38;5;212mprovider[0m=[38;5;252mregistry.terraform.io/hashicorp/aws[0m[38;5;240m | [0m[1;38;5;212mtype[0m=[38;5;252mResources[0m[48;5;240m                                       [0m[120D[29A[38;5;240m│[0m   [1;38;5;212mResources[0m                                              [38;5;240m│[0m[96m│[0m [1;38;5;212mSchema (Arguments)[0m                                       [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;178mtags ({{{} {{{} 83}}}}) [optional][0m                [96m│[0m
[38;5;240m│[0m  [1;38;5;170m> aws_instance[0m                                          [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196mami ({{{} 83}}) [required][0m                        [96m│[0m
[38;5;240m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                  [38;5;240m│[0m[96m│[0m ├──[ ] [1;38;5;196minstance_type ({{{} 83}}) [required][0m              [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m ├──[ ] [38;5;118mroot_block_device [block][0m                         [96m│[0m
[38;5;240m│[0m     aws_s3_bucket                                        [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mencrypted ({{{} 66}}) [optional][0m               [96m│[0m
[38;5;240m│[0m   5 attributes                                           [38;5;240m│[0m[96m│[0m │  ├──[ ] [38;5;178mvolume_type ({{{} 83}}) [optional][0m             [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m │  └──[ ] [38;5;178mvolume_size ({{{} 78}}) [optional][0m             [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m └──[ ] [38;5;118mebs_block_device [block][0m                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m press space to select, 'a' to toggle 
---

[TestUI_TreeViewWidthComparison/tree_view_entity2 - 1]
args/attrs          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m [38;5;240mpress / to filter[0m                                        [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m│[0m                                                          [38;5;240m│[0m[96m│[0m                                                          [96m│[0m
[38;5;240m╰──────────────────────────────────────────────────────────╯[0m[96m╰──────────────────────────────────────────────────────────╯[0m
[120D[29A[96m│[0m   [1;38;5;212mResources[0m                                              [96m│[0m[38;5;240m│[0m [1;38;5;212mSchema (Arguments)[0m                                       [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m ├──[ ] [38;5;178mtags ({{{} {{{} 83}}}}) [optional][0m                [38;5;240m│[0m
[96m│[0m  [1;38;5;170m> aws_instance[0m                                          [96m│[0m[38;5;240m│[0m ├──[ ] [1;38;5;196mami ({{{} 83}}) [required][0m                        [38;5;240m│[0m
[96m│[0m  [1;38;5;170m8 attributes, 2 blocks[0m                                  [96m│[0m[38;5;240m│[0m ├──[ ] [1;38;5;196minstance_type ({{{} 83}}) [required][0m              [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m ├──[ ] [38;5;118mroot_block_device [block][0m                         [38;5;240m│[0m
[96m│[0m     aws_s3_bucket                                        [96m│[0m[38;5;240m│[0m │  ├──[ ] [38;5;178mencrypted ({{{} 66}}) [optional][0m               [38;5;240m│[0m
[96m│[0m   5 attributes                                           [96m│[0m[38;5;240m│[0m │  ├──[ ] [38;5;178mvolume_type ({{{} 83}}) [optional][0m             [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m │  └──[ ] [38;5;178mvolume_size ({{{} 78}}) [optional][0m             [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m └──[ ] [38;5;118mebs_block_device [block][0m                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m press space to select, 'a' to toggle args/attrs          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m                                                          [96m│[0m[38;5;240m│[0m                                                          [38;5;240m│[0m
[96m│[0m            
---
